1.1.0 - Fix Text Align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@ body {
 
 .header {
     gap: 4px;
+    text-align: center;
 }
 
 .body {
